# nora

./: .gitignore  README.md  example_train_launch.sh  pyproject.toml  setup.sh  train.sh
docs/: architecture.md  launching-training.md  training-bottlenecks.md  training.md
experiments/: test.py
experiments/libero/: nora_utils.py
inference/: nora.py
lerobot_training/: evaluate_lerobot.py  lerobot_requirements.txt  lerobot_training.py  load_datasets.py  weighted_concat_shuffle_sampler.py  zero_to_gemma4.py
scripts/: download-DROID.sh  download-agibot-world.sh  download-all-datasets-sample.sh  download-egodex.sh  download-galaxea-open-world-dataset.sh  download-interndata-a1.sh  remove-video-features.py
sessions/2026-05-08/: 2026-05-08_10-00-58_bryce-test-griffin-alpha-gemma4e4b_0811d049.json  2026-05-08_10-02-23_bryce-test-griffin-alpha-gemma4e4b_77b75ce8.json
src/lerobot_policy_griffin_alpha/: __init__.py  configuration_griffin_alpha.py  modeling_griffin_alpha.py  processor_griffin_alpha.py
tests/test_lerobot_policy_griffin_alpha/: conftest.py  helpers.py  test_configuration_griffin_alpha.py  test_modeling_griffin_alpha.py  test_processor_griffin_alpha.py
training/: train.py
training/datasets/: datasets.py
utils/: data_loading.py  se3.py  skip_episodes_lerobot_dataset.py
