[project]
name = "nora"
version = "0.1.0"
description = "NORA: Neural Orchestrator for Robotics Autonomy — LeRobot training environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "huggingface-hub>=1.14.0",
    "lerobot==0.5.1",
    "pillow>=12.2.0",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.5",
    "wandb>=0.24.2",
    "wheel>=0.47.0",
]

[tool.uv.sources]
model-trainer = { git = "https://github.com/griffinlabs-ai/model_workbench.git", rev = "main" }
