[project]
name = "lerobot_policy_griffin_alpha"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "transformers>=5.6",
    "torchvision",
    "accelerate",
    "deepspeed",
    "wandb",
    "wheel",
    "scipy",
    "pillow",
    "safetensors",
    "tqdm",
    "lerobot @ git+https://github.com/huggingface/lerobot.git@dfdc48a7f131c89ade51e322f5c11180b8509c72",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "-v"
